--- a/canvas-1.html
+++ b/canvas-1.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Gamedev Canvas Workshop</title>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <style>
       * {
         padding: 0;
