--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
   <li><a href="https://webber0928.github.io/2023study/canvas-1.html">1</a></li>
   <li><a href="https://webber0928.github.io/2023study/phaser-1.html">2</a></li>
   <li><a href="https://webber0928.github.io/2023study/test1.html">3</a></li>
+  <li><a href="https://webber0928.github.io/2023study/test2.html">4</a></li>
 </ul>
