--- a/phaser-1.html
+++ b/phaser-1.html
@@ -47,8 +47,8 @@
                 this.load.image('star', 'assets/star.png');
                 this.load.image('bomb', 'assets/bomb.png');
                 this.load.spritesheet('dude', 'assets/dude.png', { frameWidth: 32, frameHeight: 48 });
-                // this.load.image('A', 'assets/熊.jpg');
-                // this.load.image('B', 'assets/神奇寶貝鈴鐺.png');
+                this.load.image('A', 'assets/熊.jpg');
+                this.load.image('B', 'assets/神奇寶貝鈴鐺.png');
                 // this.load.image('bingo', 'assets/鈴鐺.jpg');
                 this.load.image('target', 'https://webber0928.github.io/2023study/assets/鈴鐺.jpg');
             }
@@ -56,6 +56,13 @@
             function create() {
                 //  A simple background for our game
                 this.add.image(400, 300, 'sky');
+
+                target = this.add.image(720, 322, 'target');
+                target.setScale(0.2);
+                a = this.add.image(720, 150, 'A');
+                a.setScale(0.2);
+                b = this.add.image(55, 185, 'B');
+                b.setScale(0.2);
 
                 //  The platforms group contains the ground and the 2 ledges we can jump on
                 platforms = this.physics.add.staticGroup();
@@ -76,12 +83,13 @@
                 player.setBounce(0.2);
                 player.setCollideWorldBounds(true);
 
-                target = this.add.image(352, 352, 'target');
-                target.setScale(0.2);
 
                 // 创建胜利消息文本，但初始时不可见
-                victoryText = this.add.text(200, 200, 'Victory!', { fontSize: '32px', fill: '#fff' });
+                victoryText = this.add.text(340, 200, 'Victory!', { fontSize: '32px', fill: '#fff' });
                 victoryText.setVisible(false);
+
+                loseText = this.add.text(400, 200, 'lose!', { fontSize: '32px', fill: '#fff' });
+                loseText.setVisible(false);
 
                 //  Our player animations, turning, walking left and walking right.
                 this.anims.create({
@@ -112,16 +120,16 @@
                 this.input.addPointer(3);
 
                 //  Some stars to collect, 12 in total, evenly spaced 70 pixels apart along the x axis
-                stars = this.physics.add.group({
-                    key: 'star',
-                    repeat: 11,
-                    setXY: { x: 12, y: 0, stepX: 70 },
-                });
+                // stars = this.physics.add.group({
+                //     key: 'star',
+                //     repeat: 11,
+                //     setXY: { x: 12, y: 0, stepX: 70 },
+                // });
 
-                stars.children.iterate(function (child) {
-                    //  Give each star a slightly different bounce
-                    child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
-                });
+                // stars.children.iterate(function (child) {
+                //     //  Give each star a slightly different bounce
+                //     child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
+                // });
 
                 bombs = this.physics.add.group();
 
@@ -130,11 +138,11 @@
 
                 //  Collide the player and the stars with the platforms
                 this.physics.add.collider(player, platforms);
-                this.physics.add.collider(stars, platforms);
+                // this.physics.add.collider(stars, platforms);
                 this.physics.add.collider(bombs, platforms);
 
                 //  Checks to see if the player overlaps with any of the stars, if he does call the collectStar function
-                this.physics.add.overlap(player, stars, collectStar, null, this);
+                // this.physics.add.overlap(player, stars, collectStar, null, this);
 
                 this.physics.add.collider(player, bombs, hitBomb, null, this);
             }
@@ -179,9 +187,33 @@
                         player.anims.play('turn');
                     }
                 }
+
+                if (Phaser.Geom.Intersects.RectangleToRectangle(player.getBounds(), target.getBounds())) {
+                    console.log('Victory! You reached the target!');
+                    victoryText.setVisible(true);
+                    setTimeout(() => {
+                    // 隐藏胜利消息
+                    victoryText.setVisible(false);
+                
+                    // 重置玩家位置
+                    player.x = 100;
+                    player.y = 450;
+                    }, 2000); // 2秒后重置游戏，你可以根据需要调整时间
+                }
+
+                if (Phaser.Geom.Intersects.RectangleToRectangle(player.getBounds(), a.getBounds())) {
+                    console.log('lose!');
+                    loseText.setVisible(true);
+                }
+
+                if (Phaser.Geom.Intersects.RectangleToRectangle(player.getBounds(), b.getBounds())) {
+                    console.log('lose');
+                    loseText.setVisible(true);
+                }
             }
 
             function collectStar(player, star) {
+                console.log('New!!')
                 star.disableBody(true, true);
                 //  Add and update the score
                 score += 10;
