--- a/phaser-1.html
+++ b/phaser-1.html
@@ -6,9 +6,7 @@
         <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
         
         <style type="text/css">
-            body {
-                margin: 0;
-            }
+            body { margin: 0;}
         </style>
     </head>
     <body>
