--- a/app.html
+++ b/app.html
@@ -16,6 +16,7 @@
     <div id="app">
         <router-link to="/page1" class="button" >Page 1</router-link>
         <router-link to="/page2" class="button" >Page 2</router-link>
+        <router-link to="/page3" class="button" >Page 3</router-link>
         <router-view></router-view>
     </div>
 
