--- a/app.html
+++ b/app.html
@@ -11,13 +11,16 @@
     
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-router@3.5.3/dist/vue-router.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.5/dist/js.cookie.min.js"></script>
 </head>
 <body>
     <div id="app">
-        <router-link to="/page1" class="button" >Page 1</router-link>
-        <router-link to="/page2" class="button" >Page 2</router-link>
-        <router-link to="/page3" class="button" >Page 3</router-link>
-        <router-view></router-view>
+        <div style="text-align: center;">
+            <router-link to="/page1" class="button" >Page 1</router-link>
+            <router-link to="/page2" class="button" >Page 2</router-link>
+            <router-link to="/page3" class="button" >Page 3</router-link>
+            <router-view></router-view>
+        </div>
     </div>
 
     <script src="libs/vue-app.js"></script>
